# media-server

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yml
PLANS/: dvr-wallclock-timestamps.md  fallback_stream_support.md
crates/media-server-api-models/: Cargo.toml
crates/media-server-api-models/src/: lib.rs
crates/rtp/: Cargo.toml
crates/rtp/src/: lib.rs
media-server/: .env.example  Cargo.toml  TODO.md  WSC-RTP-PROTOCOL.md
media-server-api-models/: Cargo.toml
media-server/examples/: rtp_client.rs
media-server/src/: app.rs  main.rs  utils.rs
media-server/src/api/: handlers.rs  mod.rs  models.rs  webrtc-client.html
media-server/src/common/: mod.rs  nal_utils.rs  rtp.rs  traits.rs
media-server/src/domain/: mod.rs
media-server/src/domain/dvr/: filesystem.rs  mod.rs  recorder.rs
media-server/src/domain/recording/: mod.rs
media-server/src/publishers/: mod.rs  webrtc.rs  wsc_rtp.rs
media-server/src/sources/: dvr.rs  mod.rs
media-server/src/sources/rtsp/: mod.rs
