[package]
name = "media-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

ffmpeg = { git = "https://github.com/nrbnlulu/rffmpeg", branch = "master",  package = "rffmpeg" }
rand = "0.8"

gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"

webrtc = "0.9"

serde = { workspace = true }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

env_logger = "0.11"
log = "0.4"

uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

utoipa = { workspace = true, features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

futures = "0.3"
async-trait = "0.1"
bytes = "1.5"

dashmap = "5.5"
url = { version = "2.5", features = ["serde"] }

base64 = "0.21"
sdp = "0.6.2"
image = "0.24"
sha2 = "0.10"
async-stream = "0.3.6"
media-server-api-models = { workspace = true }
parking_lot = "0.12.5"
envy = "0.4.2"

[dev-dependencies]
tungstenite = { version = "0.21", features = ["native-tls"] }
ctrlc = "3.4"
